Avoid alert out of container

--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -11,3 +11,7 @@
   position: relative;
   margin-bottom: 25px;
 }
+
+.container {
+  padding-top: 10px;
+}
